# immutabledict

./: .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  SECURITY.md  azure-pipelines.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  doc.yml  release.yml
docs/: conf.py  index.rst
docs/api/: immutable_ordered_dict.rst  immutabledict.rst
immutabledict/: __init__.py
tests/: test_immutabledict.py  test_typing.py
